--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/default_padding">
+    android:padding="@dimen/default_padding"
+    android:orientation="vertical"
+    android:gravity="center_horizontal">
 
     <com.github.stkent.insetchildviewgroup.InsetChildViewGroup
+        android:id="@+id/inset_child_view_group"
         android:layout_width="200dp"
-        android:layout_height="200dp">
+        android:layout_height="200dp"
+        android:layout_marginBottom="@dimen/default_padding">
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@android:color/holo_red_dark" />
+            android:layout_height="100dp"
+            android:background="@color/colorAccent" />
 
     </com.github.stkent.insetchildviewgroup.InsetChildViewGroup>
 
-</RelativeLayout>
+    <android.support.v7.widget.AppCompatSeekBar
+        android:id="@+id/seek_bar"
+        android:layout_width="275dp"
+        android:layout_height="wrap_content" />
+
+</LinearLayout>
